; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavdevice/extr_xv.c_xv_control_message.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavdevice/extr_xv.c_xv_control_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ENOSYS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i8*, i64)* @xv_control_message to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xv_control_message(i32* %0, i32 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %10 = load i32, i32* %7, align 4
  switch i32 %10, label %14 [
    i32 128, label %11
  ]

11:                                               ; preds = %4
  %12 = load i32*, i32** %6, align 8
  %13 = call i32 @xv_repaint(i32* %12)
  store i32 %13, i32* %5, align 4
  br label %18

14:                                               ; preds = %4
  br label %15

15:                                               ; preds = %14
  %16 = load i32, i32* @ENOSYS, align 4
  %17 = call i32 @AVERROR(i32 %16)
  store i32 %17, i32* %5, align 4
  br label %18

18:                                               ; preds = %15, %11
  %19 = load i32, i32* %5, align 4
  ret i32 %19
}

declare dso_local i32 @xv_repaint(i32*) #1

declare dso_local i32 @AVERROR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
